# -

./: .gitignore  README.md  start-dev.bat  stop-dev.bat
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  dependencies.py  main.py  region_hints.py
backend/app/api/: router.py
backend/app/audit/: __init__.py  answer_trace.py
backend/app/auth/: models.py  service.py  store.py
backend/app/billing/: __init__.py  models.py  provider_base.py  service.py  store.py  stripe_provider.py
backend/app/catalog/: __init__.py  manifest.py  models.py
backend/app/chat/: __init__.py  admissions_files.py  catalog_ranking.py  followup_job.py  intake.py  models.py  orchestrator.py  prompts.py  session_store.py  summary_job.py  summary_recovery.py
backend/app/ingestion/: __init__.py  parser_utils.py  pipeline.py  registry.py
backend/app/llm/: __init__.py  base.py  factory.py  file_cache.py  ollama_util.py
backend/app/query/: __init__.py  sql_runner.py
backend/app/recommendation/: __init__.py  features.py  rules.py
backend/app/retrieval/: __init__.py  index_manifest.py  vector_index.py
backend/app/usage/: __init__.py  models.py  service.py  store.py
backend/tests/: conftest.py  test_api.py
backend/tests/evals/: test_grounded_answers.py
backend/tests/unit/: test_admissions_filename_hints.py  test_admissions_pdf.py  test_billing_service.py  test_catalog_ranking.py  test_direct_recommendation_grounding.py  test_followup_context_limit.py  test_followup_conversation_tail.py  test_ingestion_pipeline.py  test_ollama_provider.py  test_retrieval.py  (+4 more)
(+66 files in other folders)
