[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "career-counsel-ai"
version = "0.1.0"
description = "Admissions recommendation backend using file inputs and web enrichment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "ollama>=0.4",
    "openai>=1.40",
    "openpyxl",
    "pandas",
    "pydantic",
    "pydantic-settings",
    "pyarrow",
    "uvicorn[standard]",
    "xlrd",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
